# homebrew-forge

./: AGENTFORGE_DEVELOPMENT_MANIFEST.md  CHANGELOG.md  DEPLOYMENT_COMPLETE.txt  DEPLOYMENT_STATUS.md  README.md  RELEASE_NOTES_v0.4.0.md  deployment_summary.txt  pyproject.toml
.agentforge/: discovery.json  todos.json
Formula/: forge.rb  opcode-forge.rb  opencode-forge.rb
agentforge_cli/: __init__.py  app.py  cli.py  config.py  constants.py  dashboard.py  discovery.py  loadtest.py  logger.py  memory.py  palette.py  planning.py  prompts.py  queue.py  reports.py  scheduler.py  session.py  verification.py
agentforge_cli/auth/: __init__.py  credential_store.py  manager.py  provider.py
agentforge_cli/auth/providers/: __init__.py  (+5 more)
agentforge_cli/oauth/: __init__.py  flow.py  listener.py  pkce.py
agentforge_cli/runtime/: __init__.py  dispatcher.py  events.py
docs/: TODOs.yaml  discovery.md  plan.md
logs/: final_verification_report.md  implementation_report.md
reports/: final_verification.json
scripts/: deploy.sh  loadtest.sh
tests/: test_auth_manager.py  test_cli_auth_anthropic.py  test_cli_auth_cto_new.py  test_cli_structure.py  test_dashboard.py  test_dispatcher.py  test_init_command.py  test_integration_agents.py  test_loadtest.py  test_logger.py  test_memory_store.py  test_model_commands.py  test_monitor_cli.py  test_new_command.py  test_oauth_listener.py  test_palette.py  test_planning.py  test_prompt_manager.py  test_queue_retry.py  test_reports.py  test_safe_shutdown.py  test_scheduler.py  test_session.py  test_verification.py  test_verify_cli.py
