[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentforge-cli"
version = "0.2.0"
description = "AgentForge CLI with browser-based Anthropic login and agent model management."
authors = [
    {name = "AgentForge Team"},
]
readme = "AGENTFORGE_DEVELOPMENT_MANIFEST.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "PyYAML>=6.0.1",
]

[project.scripts]
forge = "agentforge_cli.cli:cli"

[tool.setuptools]
packages = ["agentforge_cli"]
